refactor(avaritia): upgrade to neoforge and minecraft 1.21.1
- Migrate from forge to neoforge
- Update minecraft version from 1.20.1 to 1.21.1
- Refactor code to use neoforged libraries and APIs
- Update dependencies and build configuration for new versions