@@ -2,7 +2,7 @@ package committee.nova.mods.avaritia.init.registry;
 
 import committee.nova.mods.avaritia.api.utils.lang.Tooltip;
 import net.minecraft.network.chat.Component;
-import net.minecraftforge.fml.ModList;
+import net.neoforged.fml.ModList;
 
 /**
  * Description:
@@ -28,7 +28,7 @@ public class ModTooltips {
 
 
     public static Component getAddedByTooltip(String modid) {
-        var name = ModList.get().getModFileById(modid).getMods().get(0).getDisplayName();
+        var name = ModList.get().getModFileById(modid).getMods().getFirst().getDisplayName();
         return ADDED_BY.args(name).build();
     }
 }
